--- a/day-2/typescript/package.json
+++ b/day-2/typescript/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx ts-node tests/tests.ts",
+    "start": "npx ts-node src/part-2.ts"
   },
   "keywords": [],
   "author": "",
